fix double scroll

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -73,6 +73,9 @@
 //     --card-border-rgb: 200, 200, 200;
 //   }
 // }
+body{
+  overflow: hidden;
+}
 * {
   box-sizing: border-box;
   padding: 0;
@@ -153,7 +156,7 @@ a.active{
 }
 .footer {
   padding: 5vw;
-  margin-top: -15vw;
+  margin-top: 5vw;
   padding-top: 0;
   p{
     font-size: larger;
@@ -218,13 +221,13 @@ a.active{
 }
 .main-content{
   position: relative;
+  // overflow: hidden;
   // height: 2829px;
-  height: 0px;
 }
 .content{
   position: relative;
   z-index: 2;
-  pointer-events: none;
+  // pointer-events: none;
 }
 spline-viewer{
   opacity: 1;
